@@ -1,3 +1,7 @@
+2019-01-08  Carl Hetherington  <cth@carlh.net>
+
+	* Fix failure to re-analyse audio when the channel map changes (#1257).
+
 2019-01-06  Carl Hetherington  <cth@carlh.net>
 
 	* Disable subtitle view/font buttons with FFmpeg content (#1236).
